tempfile/impl-trait-for-tuples/tests/fail/custom_trait_bound_invalid.stderr
error: Invalid trait bound: unexpected token
  --> tests/fail/custom_trait_bound_invalid.rs:14:40
   |
14 | #[tuple_types_custom_trait_bound(Custom, Clone)]
   |                                        ^

error[E0277]: the trait bound `(Impl, Impl): Test` is not satisfied
  --> tests/fail/custom_trait_bound_invalid.rs:32:12
   |
32 |     test::<(Impl, Impl)>();
   |            ^^^^^^^^^^^^ the trait `Test` is not implemented for `(Impl, Impl)`
   |
help: this trait has no implementations, consider adding one
  --> tests/fail/custom_trait_bound_invalid.rs:1:1
   |
1  | trait Test {
   | ^^^^^^^^^^
note: required by a bound in `test`
  --> tests/fail/custom_trait_bound_invalid.rs:30:12
   |
30 | fn test<T: Test>() {}
   |            ^^^^ required by this bound in `test`

error[E0277]: the trait bound `(Impl, Impl, Impl): Test` is not satisfied
  --> tests/fail/custom_trait_bound_invalid.rs:33:12
   |
33 |     test::<(Impl, Impl, Impl)>();
   |            ^^^^^^^^^^^^^^^^^^ the trait `Test` is not implemented for `(Impl, Impl, Impl)`
   |
help: this trait has no implementations, consider adding one
  --> tests/fail/custom_trait_bound_invalid.rs:1:1
   |
1  | trait Test {
   | ^^^^^^^^^^
note: required by a bound in `test`
  --> tests/fail/custom_trait_bound_invalid.rs:30:12
   |
30 | fn test<T: Test>() {}
   |            ^^^^ required by this bound in `test`
